kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-service
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-service
  template:
    metadata:
      labels:
        app: dummy-service
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
